src/index.css
body {
  font: 14px "Century Gothic", Futura, sans-serif;
  margin: 3vmin;
  touch-action: none;
  background-color: beige;
  user-select: none;
}

.square {
  background: #fff;
  border: 0.15vmin solid #999;
  float: left;
  height: 18vmin;
  margin-right: -1px;
  margin-top: -1px;
  padding: 0;
  width: 18vmin;
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2vmin;
}

.detector {
  background: transparent;
  border: 0.15vmin solid none;
  width: 70%;
  height: 70%;
  font-size: 7vmin;
  font-weight: bold;
  display: flex;
  align-items: center;
  justify-content: center;
}

.format {
  display: flex;
  justify-content: center;
  margin-bottom: 1vmin;
}

button {
  background-color: beige;
  border: 0.15vmin solid #999;
  border-radius: 2vmin;
  color: black;
}

